# tap-ebay

./: README.md  meltano.yml  pyproject.toml
tap_ebay/: auth.py  client.py  schema_helper.py  streams.py  tap.py
tap_ebay/tests/: test_core.py
