[tool.poetry]
name = "tap-ebay"
version = "0.0.1"
description = "`tap-ebay` is a Singer tap for Ebay, built with the Hotglue Tap SDK for Singer Taps."
authors = ["Hotglue"]
keywords = [
    "ELT",
    "Ebay",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
requests = "^2.25.1"
hotglue-tap-sdk = {git = "https://github.com/hotgluexyz/HotglueTapSDK.git", rev = "feature/hgi-2115"}


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_ebay"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-ebay = 'tap_ebay.tap:TapEbay.cli'
